--- a/media.css
+++ b/media.css
@@ -111,10 +111,11 @@
         z-index: 999;
       }
 
-      .project-info p{
-        display: none;
+      .project-list {
+        margin-right: 1rem;
+        margin-left:1rem;
+        padding: 0;
       }
-    
 
 }
 
